# catchgptoral

./: .gitignore  .railwayignore  README.md  STARTER_README.md
server/: .dockerignore  .env.example  .railwayignore  Dockerfile  Dockerfile.pcc  Dockerfile.web  README_PROCTOR.md  bot-gpt.py  bot-nemotron.py  bot.py  bot_proctor.py  cekura_client.py  cekura_state.json  config.py  deploy_pipecat_cloud.md  detection_config.json  detector.py  eval_fixtures.json  eval_log.json  exam_store.py  human_labels.json  human_voice_samples.json  live_relay.py  mock_backend.py  nemotron_llm.py  nvidia_stt.py  pcc-deploy.toml  proctor_server.py  pyproject.toml  railpack.json  railway.json  test_nemotron_llm.py  tests.json  training_observer.py  tune_detection.py  webrtc_probe.py
server/static/: index.html  teacher.html  test.html  train.html  training.html
